Fix dropdown list style and overflow
Fix #21

--- a/res/style.scss
+++ b/res/style.scss
@@ -17,6 +17,7 @@ body {
     background: #fff;
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
     font-size: 13px;
+    overflow: visible;
 
     & a {
         color: #0066aa;
@@ -969,6 +970,8 @@ a[href$="/spoiler"]::before {
 
         & ul {
             background: #262626;
+            list-style: none;
+            padding-left: 0;
         }
     }
 
